change env variables, now using configmaps and secrets

--- a/k8s/endpoint.yaml
+++ b/k8s/endpoint.yaml
@@ -15,16 +15,11 @@ spec:
       containers:
       - name: endpoint
         image: jainor/challenge:1.2
-        env: 
-        - name: mq_host
-          value: amqp
-        - name: mq_port
-          value: "5672"
-        - name: mq_user
-          value: guest
-        - name: mq_password
-          value: guest
-        - name: name
-          value: messagebroker
+        imagePullPolicy: Always
+        envFrom: 
+         - secretRef:
+            name: rabbitmq-secrets
+         - configMapRef:
+            name: mq-config
         ports:
         - containerPort: 8080
